# DermINO

./: README.md
downstreams/caption/: dataset.py  model.py  mytrain.py  run.sh
downstreams/fl-master/: README.md  base.sh  pyproject.toml
downstreams/fl-master/dermino/: __init__.py  args.py  boot.py  task.py
downstreams/fl-master/dermino/work_dir/: models_vit.py
downstreams/linear/: run.sh
downstreams/retrieval/: run.sh
downstreams/segment_linear/: model.py  requirements.txt  run.sh  train_segmentor.py
downstreams/segment_linear/tools/: segmentation.py
downstreams/segment_upernet/: model.py  new_model.py  run.sh  train_segmentor.py
downstreams/segment_upernet/tools/: segmentation.py
pretrain/: DermINO_train.py  conda.yaml  run.sh
pretrain/dinov2/configs/train/: DermINO.yaml
pretrain/dinov2/data/: augmentations.py  collate.py  loaders.py
pretrain/dinov2/data/datasets/: __init__.py  med_dataset.py  mydataset.py
pretrain/dinov2/eval/: knn.py  linear.py  metrics.py  utils.py
pretrain/dinov2/layers/: attention.py  block.py
pretrain/dinov2/loss/: koleo_loss.py
pretrain/dinov2/train/: ssl_meta_arch.py  train.py
